Added a new image to the assets folder and deleted an older one. Also modified the index.html and styles.css files to reflect the changes.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div class="banner-text">
             <h2>Browse my body of work.</h2>
         </div>
+        <div class="img-wrapper">
+            <img src="Assets/ced.jpg" alt="project name" />
+        </div>
     </header>
 
     <div class="sidebar">
@@ -55,7 +58,7 @@
     </div>
 
     <div class="sidebar">
-        <!--    <div class="side-container"> -->
+
         <div class="sidebar1">
             <h2>Work</h2>
         </div>
@@ -66,7 +69,7 @@
                         <img src="Assets/banner-colors.jpg" alt="project name">
                     </div>
                     <div class="project-desc">
-                        <h2>Surf Report</h2>
+                        <h2>Coming Soon</h2>
                         <span>MERN Stack</span>
                     </div>
                 </div>
@@ -75,7 +78,25 @@
                         <img src="Assets/banner-colors.jpg" alt="project name">
                     </div>
                     <div class="project-desc">
-                        <h2>Surf Report</h2>
+                        <h2>Coming Soon</h2>
+                        <span>Node/IoT</span>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="img-wrapper">
+                        <img src="Assets/banner-colors.jpg" alt="project name">
+                    </div>
+                    <div class="project-desc">
+                        <h2>Coming Soon</h2>
+                        <span>React/JavaScript/CSS</span>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="img-wrapper">
+                        <img src="Assets/banner-colors.jpg" alt="project name">
+                    </div>
+                    <div class="project-desc">
+                        <h2>Coming Soon</h2>
                         <span>MERN Stack</span>
                     </div>
                 </div>
@@ -84,26 +105,8 @@
                         <img src="Assets/banner-colors.jpg" alt="project name">
                     </div>
                     <div class="project-desc">
-                        <h2>Surf Report</h2>
-                        <span>MERN Stack</span>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="img-wrapper">
-                        <img src="Assets/banner-colors.jpg" alt="project name">
-                    </div>
-                    <div class="project-desc">
-                        <h2>Surf Report</h2>
-                        <span>MERN Stack</span>
-                    </div>
-                </div>
-                <div class="project">
-                    <div class="img-wrapper">
-                        <img src="Assets/banner-colors.jpg" alt="project name">
-                    </div>
-                    <div class="project-desc">
-                        <h2>Surf Report</h2>
-                        <span>MERN Stack</span>
+                        <h2>Coming Soon</h2>
+                        <span>HTML/CSS</span>
                     </div>
                 </div>
             </div>
