--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <nav class="navbar">
         <!--        <div class="nav-container">  -->
         <div class="Name">
@@ -17,13 +18,13 @@
         </div>
         <ul class="nav">
             <li>
-                <a href="#">About Me</a>
+                <a href="#about">About Me</a>
             </li>
             <li>
-                <a href="#">Work</a>
+            <a href="#work">Work</a>
             </li>
             <li>
-                <a href="#">Contact Me</a>
+                <a href="#contact">Contact Me</a>
             </li>
             <li>
                 <a href="#">Resume</a>
@@ -32,8 +33,8 @@
         <!-- </div> -->
     </nav>
 
+    <!-- banner or hero section -->
     <header class="header">
-        <img src="Assets/banner-colors.jpg" alt="" />
         <div class="banner-text">
             <h2>Browse my body of work.</h2>
         </div>
@@ -42,10 +43,11 @@
         </div>
     </header>
 
-    <div class="sidebar">
+    <!-- about section -->
+    <div class="sidebar" id="about">
         <!--    <div class="side-container"> -->
         <div class="sidebar1">
-            <h2>About <span>Me</span></h2>
+                <h2>About <span>Me</span></h2>
         </div>
         <div class="sidebar1-desc">
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident alias quaerat dolore. Necessitatibus
@@ -57,8 +59,8 @@
         </div>
     </div>
 
-    <div class="sidebar">
-
+    <!-- work section -->
+    <div class="sidebar" id="work">
         <div class="sidebar1">
             <h2>Work</h2>
         </div>
@@ -66,7 +68,7 @@
             <div class="projects-gallery">
                 <div class="project w-100">
                     <div class="img-wrapper">
-                        <img src="Assets/banner-colors.jpg" alt="project name">
+                        <img src="Assets/orange.jpg" alt="project name">
                     </div>
                     <div class="project-desc">
                         <h2>Coming Soon</h2>
@@ -75,7 +77,7 @@
                 </div>
                 <div class="project">
                     <div class="img-wrapper">
-                        <img src="Assets/banner-colors.jpg" alt="project name">
+                        <img src="Assets/purple.jpg" alt="project name">
                     </div>
                     <div class="project-desc">
                         <h2>Coming Soon</h2>
@@ -84,7 +86,7 @@
                 </div>
                 <div class="project">
                     <div class="img-wrapper">
-                        <img src="Assets/banner-colors.jpg" alt="project name">
+                        <img src="Assets/yellow.jpg" alt="project name">
                     </div>
                     <div class="project-desc">
                         <h2>Coming Soon</h2>
@@ -93,7 +95,7 @@
                 </div>
                 <div class="project">
                     <div class="img-wrapper">
-                        <img src="Assets/banner-colors.jpg" alt="project name">
+                        <img src="Assets/blue.jpg" alt="project name">
                     </div>
                     <div class="project-desc">
                         <h2>Coming Soon</h2>
@@ -102,7 +104,7 @@
                 </div>
                 <div class="project">
                     <div class="img-wrapper">
-                        <img src="Assets/banner-colors.jpg" alt="project name">
+                        <img src="Assets/aqua.jpg" alt="project name">
                     </div>
                     <div class="project-desc">
                         <h2>Coming Soon</h2>
@@ -113,7 +115,9 @@
         </div>
     </div>
 
-    <footer class="sidebar">
+
+    <!-- footer section -->
+    <footer class="sidebar" id="contact">
         <div class="sidebar1">
             <h2>Contact <span>Me</span></h2>
         </div>
@@ -132,40 +136,3 @@
 
 </html>
 
-
-<!-- <div class="boxes"> -->
-<!--   <div class="box-container"> -->
-<!-- <div class="box"> -->
-<!-- <div style="position:absolute; top:-17%;"> -->
-<!-- <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident alias quaerat dolore. Necessitatibus
-            maiores magni beatae sunt voluptates alias iusto omnis recusandae optio culpa natus, rerum commodi!
-            Dolor, et quidem.</p>
-    </div> -->
-
-<!--       <div class="box-container">  -->
-<!-- <div class="box1">
-        <h2>Surf Report</h2>
-        <h4>MERN Stack</h4>
-    </div> -->
-<!--        <div class="box-container">   -->
-<!-- <div class="box2">
-        <h2>LED Wall</h2>
-        <h4>Node/ioT</h4>
-    </div> -->
-<!--        <div class="box-container">   -->
-<!-- <div class="box3">
-        <h2>Calculator</h2>
-        <h4>React/JavaScript/CSS</h4>
-    </div> -->
-<!--       <div class="box-container">  -->
-<!-- <div class="box4">
-        <h2>Pastel Puzzel</h2>
-        <h4>MERN Stack</h4>
-    </div> -->
-<!--        <div class="box-container">   -->
-<!-- <div class="box5">
-        <h2>Run Buddy</h2>
-        <h3>HTML/CSS</h3>
-    </div>
-    </div>
-</div> -->
