Added info to README

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#about">About Me</a>
             </li>
             <li>
-            <a href="#work">Work</a>
+                <a href="#work">Work</a>
             </li>
             <li>
                 <a href="#contact">Contact Me</a>
@@ -47,15 +47,11 @@
     <div class="sidebar" id="about">
         <!--    <div class="side-container"> -->
         <div class="sidebar1">
-                <h2>About <span>Me</span></h2>
+            <h2>About <span>Me</span></h2>
         </div>
         <div class="sidebar1-desc">
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident alias quaerat dolore. Necessitatibus
-                maiores magni beatae sunt voluptates alias iusto omnis recusandae optio culpa natus, rerum commodi!
-                Dolor, et quidem.</p>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident alias quaerat dolore. Necessitatibus
-                maiores magni beatae sunt voluptates alias iusto omnis recusandae optio culpa natus, rerum commodi!
-                Dolor, et quidem.</p>
+            <p> Hi my name is Cedric Simpkins and I am an aspiring web developer. This page represents a collection of applications I designed during my Full Stack Web Development bootcamp.</p>
+            <p> This page is a work in progress as I continue to develop more applications and refine what is here today.  Please feel free to experience each application for yourself and provide feedback.  Thank you for visiting my portfolio page.</p>
         </div>
     </div>
 
@@ -135,4 +131,3 @@
 
 
 </html>
-
